Explorer page - cube effect: Fix background color on iOS devices

--- a/src/ui/styles/global/index.scss
+++ b/src/ui/styles/global/index.scss
@@ -26,3 +26,7 @@
 
   max-width: 500px;
 }
+
+.swiper-slide {
+  background: #000;
+}
